external/lmgc90_dev-fortran_lib/src/obsolete/ChiPy/simulation/wrap_model_handler.f90


  function computeResidueNorm() bind(c, name='model_handler_computeResidueNorm')
    implicit none
    real(c_double) :: computeResidueNorm

    ! use free + reac contributions to compute convergence norm
    computeResidueNorm = compute_residue_norm(1,(/1,2/))

  end function

!  function getNbMecaModels() bind(C, name='model_handler_getNbMecaModels')
!    implicit none
!    integer(kind=c_int) :: getNbMecaModels
!
!    getNbMecaModels = get_nb_mecaModels()
!
!  end function
!
!  function getNbTherModels() bind(C, name='model_handler_getNbTherModels')
!    implicit none
!    integer(kind=c_int) :: getNbTherModels
!
!    getNbTherModels = get_nb_therModels()
!
!  end function
!
!  subroutine computeDetectionCoor4All() bind(C, name="model_handler_computeDetectionCoor4All")
!    implicit none
!    integer(kind=4) :: id
!
!    do id = 1, get_nb_mecaModels()
!      call compute_coor_detec(id)
!    end do
!
!  end subroutine
!
!  subroutine getInertia(id, inertia, length) bind(C, name="model_handler_getInertia")
!    implicit none
!    integer(c_int), intent(in) :: id, length
!    real(c_double) :: inertia(length)
!
!    !call get_inertia(id, inertia)
!
!  end subroutine

  subroutine getConnectivities(id,vector,length) bind(c, name='model_handler_getConnectivities')
    implicit none
    integer(c_int), intent(in), value :: id
    type(c_ptr)    :: vector
    integer(c_int) :: length
    !
    integer(kind=4), dimension(:), pointer :: connectivities

    connectivities => get_connectivities(id)

    if( associated(connectivities) ) then
      vector = c_loc(connectivities(1))
      length = size(connectivities)
    else
      vector = c_null_ptr
      length = 0
    end if

  end subroutine

  ! ref (meca/ther), detec, begin, now (meca)
  subroutine getCoordinates(id,what,vector,dime,nb_nodes) bind(c, name='model_handler_getCoordinates')
    implicit none
    integer(c_int) , intent(in), value  :: id
    character(len=c_char), dimension(*) :: what
    type(c_ptr)    :: vector
    integer(c_int) :: dime, nb_nodes
    !
    integer(kind=4)  :: i_what, i_type, i
    character(len=5) :: f_what
    real(kind=8), dimension(:,:), pointer :: coor

    coor => null()

    i_what   = 0
    dime     = 0
    nb_nodes = 0
    vector   = c_null_ptr

    f_what = ''
    i = 1
    do while( what(i) /= C_NULL_CHAR )
      f_what = f_what(1:i-1) // what(i)
      i = i + 1
    end do

    i_type = get_type(id)
    i_what = get_coor_id_from_type(i_type,f_what)

    if( i_what < 1 ) return

    call get_coor(id, i_what, coor)

    if( associated(coor) ) then
      dime     = size(coor,1)
      nb_nodes = size(coor,2)
      vector   = c_loc(coor(1,1))
    end if

  end subroutine

  ! displacement, velocity (meca), temperature (ther)
  subroutine getNodalField(id,nf_name,when,matrix,dim1,dim2) bind(c, name='model_handler_getNodalField')
    implicit none
    integer(c_int)                 , intent(in), value :: id
    character(c_char), dimension(*), intent(in)        :: nf_name
    integer(c_int)                 , intent(in), value :: when
    type(c_ptr)                    , intent(out)       :: matrix
    integer(c_int)                                     :: dim1
    integer(c_int)                                     :: dim2
    !
    real(kind=8), dimension(:,:), pointer :: nodal_field
    character(len=30) :: string
    integer(kind=4)   :: i, i_nf, i_type

    nodal_field => null()

    i_nf = 0
    dim1 = 0
    dim2 = 0
    matrix = c_null_ptr

    string = ''
    i = 1
    do while( nf_name(i) /= C_NULL_CHAR .and. i < 30 )
      string = string(1:i-1) // nf_name(i)
      i = i + 1
    end do

    i_type = get_type(id)
    i_nf = get_nf_id_from_type(i_type, trim(string))

    if( i_nf < 1 ) return

    call get_nodal_field(id, i_nf, when, nodal_field)

    if( associated(nodal_field) ) then
      dim1 = size(nodal_field,1)
      dim2 = size(nodal_field,2)
      matrix = c_loc(nodal_field(1,1))
    end if

  end subroutine

  ! displacement, velocity (meca), temperature (ther)
  subroutine getPtrNodalField(id,nf_name,when,ptr,dim1,dim2) bind(c, name='model_handler_getNodalFieldPtr')
    implicit none
    integer(c_int)                 , intent(in), value :: id
    character(c_char), dimension(*), intent(in)        :: nf_name
    integer(c_int)                 , intent(in), value :: when
    type(c_ptr)                                        :: ptr
    integer(c_int)                                     :: dim1
    integer(c_int)                                     :: dim2
    !
    !real(kind=8), dimension(:,:), pointer :: nodal_field
    real(kind=8), dimension(:), pointer :: nodal_field
    character(len=30) :: string
    integer(kind=4)   :: i, i_nf, i_type, nb_nodes

    nodal_field => null()

    i_nf = 0
    dim1 = 0
    dim2 = 0
    ptr  = c_null_ptr

    string = ''
    i = 1
    do while( nf_name(i) /= C_NULL_CHAR .and. i < 30 )
      string = string(1:i-1) // nf_name(i)
      i = i + 1
    end do

    i_type = get_type(id)
    i_nf = get_nf_id_from_type(i_type, trim(string))

    if( i_nf < 1 ) return

    nodal_field => get_ptr_nodal_field(id, i_nf, when, nb_nodes)

    if( associated(nodal_field) ) then
      !dim1 = size(nodal_field,1)
      !dim2 = size(nodal_field,2)
      !ptr  = c_loc(nodal_field(1,1))
      dim1 = size(nodal_field)/nb_nodes
      dim2 = nb_nodes
      ptr  = c_loc(nodal_field(1))
    end if

  end subroutine

  ! displacement, velocity (meca), temperature (ther)
  subroutine setNodalField(id,nf_name,when,vector_in,length) bind(c, name='model_handler_setNodalField')
    implicit none
    integer(c_int)                 , intent(in), value :: id
    character(c_char), dimension(*), intent(in)        :: nf_name
    integer(c_int)                 , intent(in), value :: when
    real(c_double)                 , intent(in)        :: vector_in(length)
    integer(c_int)                 , intent(in), value :: length
    !
    character(len=30) :: string
    integer(kind=4)   :: i, i_nf, i_type

    string = ''
    i = 1
    do while( nf_name(i) /= C_NULL_CHAR .and. i < 30 )
      string = string(1:i-1) // nf_name(i)
      i = i + 1
    end do

    i_type = get_type(id)
    i_nf = get_nf_id_from_type(i_type, trim(string))

    if( i_nf < 1 ) return

    call set_nodal_field(id, i_nf, when, vector_in)

  end subroutine

  subroutine getNodalFieldNames(id, names, nb_nf) bind(c, name='model_handler_getNodalFieldNames')
    implicit none
    integer(c_int), intent(in), value :: id
    type(c_ptr)    :: names
    integer(c_int) :: nb_nf
    !
    integer(kind=4) :: i_type, i_nf, lt
    character(len=128), dimension(:), pointer :: nf_names

    names = c_null_ptr

    i_type = get_type(id)
    nb_nf  = get_nb_nodal_field(id)

    if( nb_nf < 1 ) return

    allocate( nf_names(nb_nf) )

    do i_nf = 1, nb_nf
      nf_names(i_nf) = trim(get_nf_type_from_id(i_type, i_nf))
      !lt = min(len(trim(nf_names(i_nf)))+1,128)
      !nf_names(:)(lt:lt) = c_null_char
    end do

    names = c_loc(nf_names(1))

  end subroutine

  subroutine getRhsContribution(id,erc_name,when,matrix,dim1,dim2) bind(c, name='model_handler_getRhsContribution')
    implicit none
    integer(c_int)                 , intent(in), value :: id
    character(c_char), dimension(*), intent(in)        :: erc_name
    integer(c_int)                 , intent(in), value :: when
    type(c_ptr)                    , intent(out)       :: matrix
    integer(c_int)                                     :: dim1
    integer(c_int)                                     :: dim2
    !
    real(kind=8), dimension(:,:), pointer :: rhs_contrib
    character(len=5) :: string
    integer(kind=4)   :: i, i_erc, i_type

    rhs_contrib => null()

    i_erc = 0
    dim1  = 0
    dim2  = 0
    matrix = c_null_ptr

    string = ''
    i = 1
    do while( erc_name(i) /= C_NULL_CHAR .and. i < 5 )
      string = string(1:i-1) // erc_name(i)
      i = i + 1
    end do

    i_type = get_type(id)
    i_erc  = get_erc_id_from_type(i_type, trim(string))

    if( i_erc < 1 ) return

    call get_rhs_contribution(id, i_erc, when, rhs_contrib)

    if( associated(rhs_contrib) ) then
      dim1 = size(rhs_contrib,1)
      dim2 = size(rhs_contrib,2)
      matrix = c_loc(rhs_contrib(1,1))
    end if

  end subroutine

  subroutine getRhsContributionNames(id, names, nb_erc) bind(c, name='model_handler_getRhsContributionNames')
    implicit none
    integer(c_int), intent(in), value :: id
    type(c_ptr)    :: names
    integer(c_int) :: nb_erc
    !
    integer(kind=4) :: i_type, i_erc
    character(len=5), dimension(:), pointer :: erc_names

    names = c_null_ptr

    i_type = get_type(id)
    nb_erc = get_nb_elementary_rhs_contrib(id)

    if( nb_erc < 1 ) return

    allocate( erc_names(nb_erc) )

    do i_erc = 1, nb_erc
      erc_names(i_erc) = trim(get_erc_type_from_id(i_type, i_erc))
    end do

    names = c_loc(erc_names(1))

  end subroutine

  subroutine getElementaryField(id,ef_name,when,matrix,dim1,dim2) bind(c, name='model_handler_getElementaryField')
    implicit none
    integer(c_int)                 , intent(in), value :: id
    character(c_char), dimension(*), intent(in)        :: ef_name
    integer(c_int)                 , intent(in), value :: when
    type(c_ptr)                    , intent(out)       :: matrix
    integer(c_int)                                     :: dim1
    integer(c_int)                                     :: dim2
    !
    real(kind=8), dimension(:,:), pointer :: elementary_field
    character(len=30) :: string
    integer(kind=4)   :: i, i_ef, i_type

    elementary_field => null()

    i_ef = 0
    dim1 = 0
    dim2 = 0
    matrix = c_null_ptr

    string = ''
    i = 1
    do while( ef_name(i) /= C_NULL_CHAR .and. i < 30 )
      string = string(1:i-1) // ef_name(i)
      i = i + 1
    end do

    call get_elementary_field(id, string, when, elementary_field)

    if( associated(elementary_field) ) then
      dim1 = size(elementary_field,1)
      dim2 = size(elementary_field,2)
      matrix = c_loc(elementary_field(1,1))
    end if

  end subroutine

end module
